unpackaged/main/default/objects/ffirule__IntegrationRuleRelationship__c/ffirule__IntegrationRuleRelationship__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffirule__helpintegrationrulerelationship</customHelpPage>
    <label>ClickLink Relationship</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClickLink Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>