unpackaged/main/default/objects/ffirule__IntegrationRuleRelationship__c/fields/ffirule__IntegrationRule__c.field-meta.xml
<CustomField>
    <fullName>ffirule__IntegrationRule__c</fullName>
    <label>Master ClickLink Rule</label>
    <referenceTo>ffirule__IntegrationRule__c</referenceTo>
    <relationshipLabel>ClickLink Relationships (Master ClickLink)</relationshipLabel>
    <relationshipName>IntegrationRuleRelationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>