unpackaged/main/default/objects/ffirule__IntegrationRuleRelationship__c/fields/ffirule__RelationshipIntegrationRule__c.field-meta.xml
<CustomField>
    <fullName>ffirule__RelationshipIntegrationRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detail ClickLink Rule</label>
    <referenceTo>ffirule__IntegrationRule__c</referenceTo>
    <relationshipLabel>ClickLink Relationships (Detail ClickLink)</relationshipLabel>
    <relationshipName>RelationshiIntegrationRule</relationshipName>
    <type>Lookup</type>
</CustomField>