unpackaged/main/default/objects/ffirule__IntegrationRuleRelationship__c/fields/ffirule__RelationshipName__c.field-meta.xml
<CustomField>
    <fullName>ffirule__RelationshipName__c</fullName>
    <label>Source Relationship Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>