unpackaged/main/default/objects/ffirule__IntegrationRuleRelationship__c/fields/ffirule__RelationshipSourceObject__c.field-meta.xml
<CustomField>
    <fullName>ffirule__RelationshipSourceObject__c</fullName>
    <formula>ffirule__RelationshipIntegrationRule__r.ffirule__SourceObject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Relationship Object</label>
    <type>Text</type>
</CustomField>