unpackaged/main/default/objects/ffirule__IntegrationRuleRelationship__c/fields/ffirule__RelationshipTargetField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__RelationshipTargetField__c</fullName>
    <label>Target Relationship Field</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>