unpackaged/main/default/objects/ffirule__IntegrationRuleRelationship__c/fields/ffirule__RelationshipTargetObject__c.field-meta.xml
<CustomField>
    <fullName>ffirule__RelationshipTargetObject__c</fullName>
    <formula>ffirule__RelationshipIntegrationRule__r.ffirule__TargetObject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Relationship Object</label>
    <type>Text</type>
</CustomField>