unpackaged/main/default/objects/ffirule__IntegrationRuleRelationship__c/fields/ffirule__SourceRelationshipField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__SourceRelationshipField__c</fullName>
    <label>Source Relationship Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>